test/libsolidity/syntaxTests/types/mapping/mapping_data_location_function_param_public.sol
contract c {
    function f3(mapping(uint => uint) memory) view public {}
}
// ----
// TypeError: (29-57): Mapping types can only have a data location of "storage" and thus only be parameters or return variables for internal or library functions.
